--- a/configuration-service/app/src/main/resources/templates/pages/dashboard.html
+++ b/configuration-service/app/src/main/resources/templates/pages/dashboard.html
@@ -42,7 +42,8 @@
                     <th data-field="name" data-sortable="true">CSP Name</th>
                     <th data-field="domain" data-sortable="true">Domain</th>
                     <th data-field="registrationDate" data-sortable="true">Registration Date</th>
-                    <th data-field="lastUpdate" data-sortable="true">Last Update</th>
+                    <th data-field="lastUpdate" data-sortable="true">Last Heartbeat</th>
+                    <th data-field="lastManaged" data-sortable="true" data-visible="false" class="col-xs-1">Last Managed</th>
                     <th data-field="confUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Configured Updates</th>
                     <th data-field="reportUpdates" data-sortable="false" data-visible="false" class="col-xs-1">Reported Updates</th>
                     <th data-field="btn" data-sortable="false" data-align="center">Actions</th>
