--- a/configuration-service/app/src/main/resources/templates/fragments.html
+++ b/configuration-service/app/src/main/resources/templates/fragments.html
@@ -55,8 +55,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="dashboard.html" th:href="@{/}">
-            <img src="../static/assets/img/logo.png" th:src="@{/assets/img/logo.png}" style="float: left; margin-top: -15px;"/>
+        <a class="navbar-brand" th:href="@{/}">
+            <img th:src="@{/assets/img/logo.png}" style="float: left; margin-top: -15px;"/>
         </a>
         <span class="navbar-brand" style="">CSP - Central Configuration Service</span>
 
@@ -79,7 +79,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user"></span>&nbsp;
-                    <strong>admin</strong>
+                    <strong><span th:text="${user}"></span></strong>
                     <span class="glyphicon glyphicon-chevron-down"></span>
                 </a>
                 <ul class="dropdown-menu">
@@ -92,7 +92,7 @@
                                     </p>
                                 </div>
                                 <div class="col-lg-8">
-                                    <p class="text-left">admin</p>
+                                    <p class="text-left"><span th:text="${user}"></span></p>
                                     <p class="text-left">
                                         <strong> </strong>
                                     </p>
