--- a/configuration-service/app/src/main/resources/templates/pages/csp/register.html
+++ b/configuration-service/app/src/main/resources/templates/pages/csp/register.html
@@ -97,9 +97,10 @@
                                 <div class="form-group input-group">
                                     <select class="form-control csp_contact_type" name="csp_contact_type[]">
                                         <option selected="selected"></option>
-                                        <option value="tech-admin">tech-admin</option>
-                                        <option value="contact">contact</option>
-                                        <option value="securityofficer">securityofficer</option>
+                                        <option th:each="contactType : ${csp_contact_types}"
+                                                th:value="${contactType.getValue()}"
+                                                th:text="${contactType}">
+                                        </option>
                                     </select>
                                     <span class="input-group-btn">
                                         <button data-duplicate-remove="contact" class="btn btn-success" type="button"><i class="fa fa-minus"></i></button>
