--- a/configuration-service/app/src/main/resources/templates/pages/manage.html
+++ b/configuration-service/app/src/main/resources/templates/pages/manage.html
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="page-header"><i class="fa fa-cog"></i> Manage CSP DFN-Cert CSIRT Installation</h2>
+            <h2 class="page-header"><i class="fa fa-cog"></i> Manage <span th:text="${cspName}"></span></h2>
         </div>
     </div>
 
