--- a/integration-layer-dsl-api/il-anon/src/main/resources/static/css/custom.css
+++ b/integration-layer-dsl-api/il-anon/src/main/resources/static/css/custom.css
@@ -146,3 +146,8 @@ input.error {
     /*white-space:pre;*/
     /*word-wrap:break-word;*/
 }
+
+/*Change the size here*/
+div.tooltip-inner {
+    max-width: 350px;
+}
