--- a/integration-layer-dsl-api/il-anon/src/main/resources/templates/pages/mappings.html
+++ b/integration-layer-dsl-api/il-anon/src/main/resources/templates/pages/mappings.html
@@ -67,7 +67,7 @@
                     <div class="col-md-2 col-xs-12" style="text-align: right">
                         <div class="form-group">
                             <p>&nbsp;</p>
-                            <button th:href="'mapping/save'" type="submit" value="Submit" class="save btn btn-success">Save</button>&nbsp;
+                            <button th:href="'mapping/save'" type="submit" value="Submit" class="save btn btn-success"><i class="glyphicon glyphicon-plus"></i>&nbsp;Save</button>&nbsp;
                             <button type="reset" value="Reset" class="save btn btn-default pull-right">Clear</button>
                         </div>
                     </div>
