--- a/integration-layer-dsl-api/il-anon/src/main/resources/templates/pages/rulesets.html
+++ b/integration-layer-dsl-api/il-anon/src/main/resources/templates/pages/rulesets.html
@@ -50,13 +50,13 @@
                         </div>
                         <div class="col-md-2 col-xs-12 pull-down">
                             <div class="form-group">
-                                <button th:href="'rulesets/save'" type="submit" value="Submit" class="save btn btn-success">Save</button>&nbsp;
+                                <button th:href="'rulesets/save'" type="submit" value="Submit" class="save btn btn-primary"><i class="glyphicon glyphicon glyphicon-upload"></i>&nbsp;Import</button>&nbsp;
                                 <button type="reset" value="Reset" class="save btn btn-default pull-right">Clear</button>
                             </div>
                         </div>
                         <div class="col-md-10 col-xs-12 pull-down pull-right" style="text-align: right">
                             <div class="form-group">
-                                <button type="#" value="Create" class="save btn btn-primary pull-right">Create</button>
+                                <button type="#" value="Create" class="save btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;Create</button>&nbsp;
                             </div>
                         </div>
                     </form>
