logging and ui fixes

--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/fragments.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/fragments.html
@@ -4,13 +4,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> </meta>
     <!-- Bootstrap -->
-    <link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"  rel="stylesheet" media="screen"> </link>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap-theme.min.css}"/>
     <link th:href="@{/webjars/bootstrap-table/1.9.1/bootstrap-table.css}" rel="stylesheet"></link>
-    <link th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet" media="screen" />
-    <link th:href="@{/webjars/bootstrap-fileinput/4.2.0/css/fileinput.min.css}" rel="stylesheet"/>
+    <link th:href="@{/webjars/bootstrap-fileinput/css/fileinput.min.css}" rel="stylesheet"/>
 
-    <link rel="stylesheet" th:href="@{/css/jumbotron.css}"/>
-    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
+    <!--font-awsome-->
+    <link th:href="@{/webjars/font-awesome/css/font-awesome.min.css}" rel="stylesheet" media="screen" />
+
+    <link rel="stylesheet" th:href="@{/assets/css/jumbotron.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/css/custom.css}"/>
 
 </head>
 <body>
