--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/rulesets.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/rulesets.html
@@ -106,7 +106,7 @@
     </div>
 </div>
 <th:block th:replace="fragments::scripts"></th:block>
-<script th:src="@{/webjars/bootstrap-fileinput/4.2.0/js/fileinput.min.js}"></script>
+<script th:src="@{/webjars/bootstrap-fileinput/js/fileinput.min.js}"></script>
 
 <script>
 
