SXCSP-85: Finalizing UI for Sharing policies management

--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
@@ -78,9 +78,9 @@
                                 <thead>
                                 <tr>
                                     <th><i class="fa  fa-file-code-o"></i></th>
-                                    <th data-sortable="true" data-sort-name="TCName_sort">CSP Id</th>
-                                    <th data-sortable="true" data-sort-name="TCName_sort">Data Type</th>
-                                    <th data-sortable="true" data-sort-name="TCName_sort">Ruleset</th>
+                                    <th data-sortable="true">CSP Id</th>
+                                    <th data-sortable="true">Data Type</th>
+                                    <th data-sortable="true">Ruleset</th>
                                     <th>Actions</th>
                                 </tr>
                                 </thead>
