--- a/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/main.html
+++ b/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/main.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
     <!--<meta th:name="_csrf" th:content="${_csrf.token}"/>-->
     <!--<meta th:name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+    <!--font-awsome-->
+    <link th:href="@{/webjars/font-awesome/css/font-awesome.min.css}" rel="stylesheet" media="screen" />
     <script type="text/javascript" src="/webjars/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link th:href="@{/webjars/bootstrap-table/1.9.1/bootstrap-table.css}" rel="stylesheet"></link>
+    <script th:src="@{/webjars/bootstrap-table/1.9.1/bootstrap-table.js}"></script>
+    <script th:src="@{/webjars/bootstrap-table/1.9.1/locale/bootstrap-table-en-US.js}"></script>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap-theme.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/main.css}" href="/css/main.css"/>
     <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
