--- a/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
+++ b/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
@@ -11,9 +11,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand-icon fa fa-user-secret fa-3x" th:href="@{${T(com.intrasoft.csp.server.policy.domain.SharingPolicyRoutes).HOME_URL}}">
-                    <span class="navbar-brand" th:text="#{home.title}"></span>
-                </a>
+
+                <a class="navbar-brand-icon fa fa-cubes fa-3x pull-left"
+                   style="text-decoration: none; padding-top: 5px"
+                   th:href="@{${T(com.intrasoft.csp.server.policy.domain.SharingPolicyRoutes).BASE_URL}}"></a>
+                <span class="navbar-brand" th:text="#{home.title}"></span>
+
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
