--- a/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
+++ b/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
@@ -52,7 +52,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <p>
-                                                <a href="#" class="btn btn-danger btn-block">Logout</a>
+                                                <a href="/logout" class="btn btn-danger btn-block">Logout</a>
                                             </p>
                                         </div>
                                     </div>
