Fix /updates issue

--- a/csp-apps/configuration/conf-server/src/main/resources/static/assets/css/custom.css
+++ b/csp-apps/configuration/conf-server/src/main/resources/static/assets/css/custom.css
@@ -36,8 +36,8 @@ body {
 }
 
 .navbar-login {
-    width: 305px;
-    padding: 10px;
+    width: 100%;
+    /*padding: 10px;*/
     padding-bottom: 0px;
 }
 
@@ -144,3 +144,4 @@ input.error, select.error {
     /*white-space:pre;*/
     /*word-wrap:break-word;*/
 }
+
