--- a/csp-apps/configuration/conf-server/src/main/resources/templates/fragments.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/fragments.html
@@ -55,9 +55,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" th:href="@{/}">
-            <img th:src="@{/assets/img/logo.png}" style="float: left; margin-top: -15px;"/>
-        </a>
         <span class="navbar-brand" style="">CSP - Central Configuration Service</span>
 
 
@@ -84,30 +81,11 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li>
-                        <div class="navbar-login">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <p class="text-center">
-                                        <span class="glyphicon glyphicon-user icon-size"></span>
-                                    </p>
-                                </div>
-                                <div class="col-lg-8">
-                                    <p class="text-left"><span th:text="${user}"></span></p>
-                                    <p class="text-left">
-                                        <strong> </strong>
-                                    </p>
-                                    <p class="text-left small"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
                         <div class="navbar-login navbar-login-session">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <p>
-                                        <a href="#" class="btn btn-danger btn-block">Logout</a>
+                                        <a href="/logout" class="btn btn-danger btn-block">Logout</a>
                                     </p>
                                 </div>
                             </div>
