--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/register.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/register.html
@@ -46,7 +46,7 @@
                     <div class="col-md-4 col-xs-12">
                         <div class="form-group">
                             <label for="csp_id">CSP ID:</label>
-                            <input class="form-control uuid" id="csp_id" maxlength="36" name="csp_id" type="text" data-mask="00000000-0000-0000-0000-000000000000" placeholder="________-____-____-____-____________"></input>
+                            <input class="form-control uuid" id="csp_id" maxlength="36" name="csp_id" type="text" th:value="${cspId}" readonly="readonly"></input>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
